Cascading Change Log

2.1 [unreleased]

  Added c.p.a.FirstBy partial aggregator to allow for capturing first seen c.t.Tuple in a Tuple stream. Argument
  c.f.Fields j.u.Comparators are honored for secondary sorting.

  Updated c.p.a.AggregateBy to honor argumentField c.f.Fields j.u.Comparator instances for secondary sorting.

  Updated c.o.a.First to accumulate the first N seen c.t.Tuple instances.

  Added support for c.c.CascadeListener on c.c.Cascade instances.

  Updated c.p.j.InnerJoin.JoinIterator and sub-classes to re-use c.t.Tuple instances.

  Added support for restartable checkpoint c.f.Flow instances by providing a runID to identify run attempts.

  Updated build and tests to simplify development of alternative planners.

2.0.5

  Updated c.f.p.ElementGraphException messages to name disconnected elements.

  Properly scope c.t.Tap properties to c.f.l.LocalFlowStep and then pass them to source/sink stages in
  c.f.l.s.LocalStepStreamGraph. @mrwalker

  Fix for c.s.u.DelimitedParser to support delimiter as last char in quoted field.

  Fix for c.o.f.UnGroup constructor failing against correct constructor values.

  Added missing setter methods on c.p.AppProps for application jar path and class values.

  Fix for possible NPE when debug logging is enabled during planning.

  Improved error message when Hadoop serializer for a given type cannot be found in some cases.

2.0.4

  Removed remnant log4j dependency in c.t.h.i.MultiInputSplit.

  Fixed issue where c.t.Tap may fail resolving outgoing fields.

  Added missing #equals() method to c.t.TupleEntry that will honor field j.u.Comparator instances.

  Fixed issue where c.f.s.SparseTupleComparator would not properly sort with re-ordered sort fields.

  Fixed issue where c.t.TupleEntryChainIterator#hasNext() would fail if called more than once.

  Updated c.t.h.Hfs internal methods call #getPath() instead of #getIdentifier() so sub-classes can override.
